--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,4 @@
-version: '2.30.1'  # Adicione a versão do compose
+version: '2.30.1'
 
 services:
   db:
@@ -15,16 +15,15 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - app-network  # Conectando à rede interna sem exposição de porta
-   
+      - app-network 
+
   api:
-    build:
-      context: ./api
+    image: yanorck/api-apirestful_myanimelist:v1.0  # Usando a imagem publicada
     environment:
       DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER:-projeto}:${POSTGRES_PASSWORD:-projeto}@db:5432/${POSTGRES_DB:-projeto}
-      SECRET_KEY : ${SECRET_KEY:-mysecretkey}
+      SECRET_KEY: ${SECRET_KEY:-mysecretkey}
     networks:
-      - app-network  # Conectando à rede
+      - app-network
     depends_on:
       db:
         condition: service_healthy  # Espera até o DB estar saudável
@@ -32,14 +31,13 @@ services:
       replicas: 3
 
   web:
-    build:  # Use build em vez de image se você estiver construindo a partir de um Dockerfile
-      context: ./web
+    image: yanorck/web-apirestful_myanimelist:v1.0  # Usando a imagem publicada
     ports:
       - "8080:80"
     volumes:
-      - ./web/nginx.conf:/etc/nginx/conf.d/default.conf  # Montando o arquivo de configuração
+      - ./web/nginx.conf:/etc/nginx/conf.d/default.conf  
     networks:
-      - app-network  # Conectando à rede
+      - app-network
     depends_on:
       - api
 
